--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
-
+<link rel="stylesheet" href="//at.alicdn.com/t/font_498589_frzitgap9ljzia4i.css">
 <router-outlet></router-outlet>
-<div>
-  <a [routerLink] = "['/front']">Home</a>
-  <button (click)="gotoClassify()" >跳转分类</button>
-  <a [routerLink]="['/find']">发现</a>
-  <a [routerLink]="['/my']">我的</a>
-</div>
