12-7 xws faxian finish

--- a/src/app/find/find.component.html
+++ b/src/app/find/find.component.html
@@ -1,4 +1,3 @@
-<p>
-  find works!
-  <a [routerLink] = "['/detail']">xaingqing </a>
-</p>
+
+<!-- <a [routerLink] = "['/detail']">xaingqing </a> -->
+<app-jingcaidaoshi></app-jingcaidaoshi>
