--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,16 +1,17 @@
 
 footer{
     width: 100%;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     left: 0;
     background: #0e0e0e;
     height:4.21875rem;
+    display: flex;
 }
 a{
+    flex: 1;
     display: inline-block;
     height: 100%;
-    width: 24%;
     text-align: center;
     color: white;
 }
