--- a/src/app/my/my.component.html
+++ b/src/app/my/my.component.html
@@ -1,3 +1,86 @@
-<p>
-  my works!
-</p>
+<header>
+  我的
+</header>
+<div class="myMain">
+  <div class="login">
+      <a>
+          <span>
+              <i class="iconfont icon-wode"></i>
+          </span>
+      </a>
+     <div>
+       <a>登录/注册</a>(登陆后更好玩哦)
+     </div>
+    <b><i class="iconfont icon-mjiantou"></i></b>
+  </div>
+  <div class="more">
+    <a>
+        <i class="iconfont icon-vip"></i>
+        <P>
+          <span>开通VIP</span>
+          <i class="iconfont icon-mjiantou"></i>
+        </P>    
+    </a>  
+  </div>
+
+  <div class="more">
+    <a>
+        <i class="iconfont icon-vip"></i>
+        <P>
+          <span>开通VIP</span>
+          <i class="iconfont icon-mjiantou"></i>
+        </P>    
+    </a>  
+  </div>
+
+  <div class="more">
+    <a>
+        <i class="iconfont icon-vip"></i>
+        <P>
+          <span>开通VIP</span>
+          <i class="iconfont icon-mjiantou"></i>
+        </P>    
+    </a>  
+  </div>
+
+  <div class="more">
+    <a>
+        <i class="iconfont icon-vip"></i>
+        <P>
+          <span>开通VIP</span>
+          <i class="iconfont icon-mjiantou"></i>
+        </P>    
+    </a>  
+  </div>
+
+  <div class="more">
+    <a>
+        <i class="iconfont icon-vip"></i>
+        <P>
+          <span>开通VIP</span>
+          <i class="iconfont icon-mjiantou"></i>
+        </P>    
+    </a>  
+  </div>
+
+  <div class="more">
+    <a>
+        <i class="iconfont icon-vip"></i>
+        <P>
+          <span>开通VIP</span>
+          <i class="iconfont icon-mjiantou"></i>
+        </P>    
+    </a>  
+  </div>
+
+  <div class="more">
+    <a>
+        <i class="iconfont icon-vip"></i>
+        <P>
+          <span>开通VIP</span>
+          <i class="iconfont icon-mjiantou"></i>
+        </P>    
+    </a>  
+  </div>
+</div>
+
