--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,19 +1,21 @@
 
 <footer>
-  <a [routerLink]="['/front']">
+  <a [routerLink]="['/front']" ui-sref-active="active">
     <i class="iconfont icon-jingxuan"></i>
     <span>首页</span>
   </a>
-  <a [routerLink]="['/classify']">
+  <a [routerLink]="['/classify']" >
     <i class="iconfont icon-leimupinleifenleileibie"></i>
     <span>分类</span>
   </a>
-  <a [routerLink]="['/find']">
+  <a [routerLink]="['/find']" >
     <i class="iconfont icon-zhinanzhen1"></i>
     <span>发现</span>
   </a>
-  <a [routerLink]="['/my']">
+  <a [routerLink]="['/my']" >
     <i class="iconfont icon-wode "></i>
     <span>我的</span>
   </a>
 </footer>
+
+
